Fix bug causing an exception to occur if a second player peeked at an objective.
This bug was due to the peeked public objectives being loaded in with an immutable list.